--- a/views/page-about.twig
+++ b/views/page-about.twig
@@ -5,7 +5,7 @@
 	<section class="page-intro-about">
 			<h1 class="intro-h1 about-intro">About Bikes Fight Cancer</h1>
 			<h2 class="intro-h2">Friends Fight Cancer Together</h2>
-			<a class="btn btn-donate">Donate Today</a>
+			<a class="btn btn-donate">Join the Fight</a>
 	</section><!-- /page-intro -->
 
 	<section class="page-sub-intro">
@@ -27,35 +27,35 @@
 
 			<div class="team-member media-block">
 				<div class="rider-img-mod">
-					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-jon.png">
+					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-johnny.png">
 				</div><!-- /rider-img-mod -->
 				<p><strong>Johnny Morin</strong> – Eleven years ago, my father was diagnosed with cancer. He had a long, hard battle with the disease before passing away in July of 2005. I ride for my father.</p>
 			</div><!-- /team-member -->
 
 			<div class="team-member media-block">
 				<div class="rider-img-mod">
-					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-jon.png">
+					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-mike.png">
 				</div><!-- /rider-img-mod -->
 				<p><strong>Mike Swiatlowski</strong> – Listening to a friend explain that he has an unexplainable cancer was one of the most shocking moments in my life. I promised all of my help and support.</p>
 			</div><!-- /team-member -->
 
 			<div class="team-member media-block">
 				<div class="rider-img-mod">
-					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-jon.png">
+					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-ryan.png">
 				</div><!-- /rider-img-mod -->
 				<p><strong>Ryan O’Connor</strong> – Sadly, two of my uncles have passed away as a result of cancer and it has been very difficult. I am riding for my family.</p>
 			</div><!-- /team-member -->
 
 			<div class="team-member media-block">
 				<div class="rider-img-mod">
-					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-jon.png">
+					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-bob.png">
 				</div><!-- /rider-img-mod -->				
 				<p><strong>Bob Zemba</strong> – My father refuses to let cancer define his life. Eight years after he was given two years to live, he’s winning the battle despite the odds. I ride to celebrate his life.</p>
 			</div><!-- /team-member -->
 
 			<div class="team-member media-block">
 				<div class="rider-img-mod">
-					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-jon.png">
+					<img class="rider-img" src="/wp-content/themes/spokes/images/rider-img-james.png">
 				</div><!-- /rider-img-mod -->				
 				<p><strong>James Sutter</strong> – In addition to my grandparents and my uncle, my father-in-law died from cancer. I am riding for the bride who never got to be walked down the aisle by her father.</p>
 			</div><!-- /team-member -->
