--- a/src/style.scss
+++ b/src/style.scss
@@ -94,7 +94,13 @@ em   	{	font-style: italic;	}
 	margin-bottom: 25px;
 	@include columns(2);
 	font: 400 18px/150% $freight-txt;	
+	text-align: justify;
 }
+
+.section-hd-mod {
+	text-align: center;
+}
+
 
 
 /* ============================================= */
@@ -120,6 +126,21 @@ em   	{	font-style: italic;	}
 	font: 400 20px/140% $freight-txt;
 	color: #464646;
 }
+
+.post-h1 {
+	font: 800 45px/125% $freight-sans;
+	margin-bottom: 28px;
+	color: #000;
+}
+
+.byline {
+	font: 800 18px/125% $freight-sans;
+	text-transform: uppercase;
+	color: #555;
+	margin-bottom: 25px;
+	letter-spacing: 1px;
+}
+
 
 
 /* ============================================= */
@@ -204,6 +225,16 @@ em   	{	font-style: italic;	}
 	text-align: center;	
 }
 
+.page-intro-raffle {
+	padding: 0% 0%;
+	background: url(/wp-content/themes/spokes/images/raffle-hero.jpg) no-repeat center center;
+	background-size: 120%; //If you change this, change the number in site.js
+	max-height: 786px;
+	height: 786px;	
+	margin: 0 auto;
+	text-align: center;	
+}
+
 .intro-h1 {
 }
 
@@ -238,6 +269,19 @@ em   	{	font-style: italic;	}
 	width: 100%;
 	text-indent: -3000px;
 	background: url(/wp-content/themes/spokes/images/about-intro-title.png) no-repeat 50% 100%;
+	margin: 0 auto;
+	text-align: center;	
+	height: 110px;
+	padding-top: 400px;
+	background-size: 1080px;
+	margin-bottom: 25px;	
+}
+
+.about-intro {
+	max-width: 1080px;
+	width: 100%;
+	text-indent: -3000px;
+	background: url(/wp-content/themes/spokes/images/raffle-intro-title.png) no-repeat 50% 100%;
 	margin: 0 auto;
 	text-align: center;	
 	height: 110px;
@@ -293,6 +337,7 @@ em   	{	font-style: italic;	}
 	max-width: 750px;
 	width: 100%;
 }
+
 
 
 /* ============================================= */
@@ -383,6 +428,7 @@ em   	{	font-style: italic;	}
 }
 
 
+
 /* ============================================= */
 
 /*	About       						   		 */ 
@@ -410,6 +456,7 @@ em   	{	font-style: italic;	}
 	text-align: center;
 	margin-bottom: 20px;
 }
+
 
 
 /* ============================================= */
@@ -462,6 +509,67 @@ em   	{	font-style: italic;	}
 }
 
 
+
+/* ============================================= */
+
+/*	Blog-Post   						   		 */ 
+
+/* ============================================= */
+
+.intro-img-post {
+	padding: 0% 0%;
+	background: url(/wp-content/themes/spokes/images/hero-img-post.jpg) no-repeat center center;
+	background-size: 120%;
+	max-height: 786px;
+	height: 786px;	
+	margin: 0 auto;
+	text-align: center;		
+}
+
+
+.post-content-topper, .post-content-mod {
+	margin: 0 auto;
+	max-width: 780px;
+	width: 100%;
+	background-color: #fff;		
+}
+
+.post-content-topper {
+	border-top: 1px solid;
+	border-left: 1px solid;
+	border-right: 1px solid;
+	border-color: #eee;
+	margin-top: -50px;
+	height: 140px;
+	@include box-shadow(0 0 30px rgba(0, 0, 0, 0.2));	
+}
+
+.post-content-mod {
+	max-width: 779px;
+	margin-top: -140px;
+	padding: 30px 10px 10px 10px;
+
+	p {
+		font: 20px/160% $freight-txt;
+		margin-bottom: 28px;
+	}
+
+	> img {
+		width: 100%;
+	}
+
+	.section-h1 {
+		font-size: 18px;
+		margin-bottom: 40px;
+	}
+
+	@media (min-width:$small) {
+		padding: 30px 80px 80px 80px;
+	}//MQ
+}//post-conenter-mod
+
+
+
 /* ============================================= */
 
 /*	History-Page   						   		 */ 
@@ -493,6 +601,10 @@ em   	{	font-style: italic;	}
 	padding-bottom: 16px;
 }
 
+a.history-link-mod {
+	display: block;
+}
+
 .year-tz-img {
 	max-width: 380px;
 	width: 100%;
@@ -510,6 +622,50 @@ em   	{	font-style: italic;	}
 		margin-bottom: 15px;
 	}
 }
+
+
+
+/* ============================================= */
+
+/*	Raffle Page    						   		 */ 
+
+/* ============================================= */
+
+.raffle-list {
+	background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
+	border-top: 2px solid;
+	border-bottom: 1px solid;	
+	border-color: #fff;
+}	
+
+.raffle-list-mod {
+	background-color: #fff;
+	margin: 0 auto;
+	border: 1px solid;
+	border-color: #eee;
+	@include box-shadow(0 0 30px rgba(0, 0, 0, 0.2));
+	margin-bottom: -85px;
+	max-width: 935px;
+	width: 100%;
+	padding: 50px 100px 60px 90px;
+	text-align: center;
+}
+
+.raffle-list-item {
+	font: 20px/200% $freight-txt;
+	text-align: left;
+}
+
+.raffle-list-bg {
+	background-color: #fff;
+	height: 515px;
+	border: 1px solid;
+	border-color: #eee;
+	@include box-shadow(0 0 30px rgba(0, 0, 0, 0.2));
+	@include transform(rotate(-3deg));
+	position: absolute; 			
+}
+
 
 
 /* ============================================= */
@@ -585,6 +741,8 @@ footer {
 	padding: 16px 25px 20px 25px;
 	letter-spacing: 1px;
 }
+
+
 
 /* ============================================= */
 
