--- a/views/page-raffle.twig
+++ b/views/page-raffle.twig
@@ -2,17 +2,62 @@
 
 {% block content %}
 
-	<h1>Page Raffle</h1>
-	<div class="content-wrapper">
-		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
-			<section class="article-content">
-				<h1 class="article-h1">{{post.post_title}}</h1>
-				
-				
-				{{post.post_content|raw|wpautop}}
-			</section>
+	<section class="page-intro-raffle">
+			<h1 class="intro-h1 about-intro">Raffle Time!</h1>
+			<h2 class="intro-h2">Win Big: 31 Days, 31 Prizes</h2>
+			<a class="btn btn-donate">Get Lucky</a>
+	</section><!-- /page-intro -->
 
-		</article>
-	</div> <!-- /content-wrapper -->
+	<section class="page-sub-intro">
+		<div class="page-mod">
+			<div class="sub-intro-txt-mod">
+			<h3 class="sub-intro-txt">A large part of our donation support comes from individual contributions – friends, family, co-workers and complete strangers! In an effort to add some excitement (and the chance for reward), we’ve set up a 31-day, 31-prize raffle during the month of July.</h3>
+			</div><!-- /sub-intro-txt-mod -->
+		</div><!-- /page-mod -->	
+	</section><!-- /page-sub-intro -->	
+
+	<section class="raffle-list">
+		<div class="page-mod"> 
+			<div class="raffle-list-mod"> 
+
+				<img class="section-icon" src="/wp-content/themes/spokes/images/icon-blog.png">
+				<h4 class="section-h1">The 2013 Raffle</h4>
+
+				<ul class="raffle-list-ul">
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 12 – Portrait photo session -- Warren Izyk</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Farron Madigan</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Farron Madigan</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Tito Bottitta</li>
+					<li class="raffle-list-item">July 08 – 1-hour massage therapy -- Mathew Swiatlowski</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 12 – Portrait photo session -- Warren Izyk</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 12 – Portrait photo session -- Warren Izyk</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Farron Madigan</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 08 – 1-hour massage therapy  -- Mike Swartz</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 12 – Portrait photo session -- Warren Izyk</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Farron Madigan</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Farron Madigan</li>
+					<li class="raffle-list-item">July 08 – 1-hour massage therapy -- Mathew Swiatlowski</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Kevin Bouvier</li>
+					<li class="raffle-list-item">July 01 -- $100 -- Farron Madigan</li>
+					<li class="raffle-list-item">July 01 -- $500 -- Kevin Bouvier</li>
+				</ul><!-- /raffle-list-ul -->
+			</div><!-- /raffle-list-mod -->
+		</div><!-- /page-mod -->
+	</section><!-- /raffle-list -->
 
 {% endblock %}
