--- a/views/home.twig
+++ b/views/home.twig
@@ -4,7 +4,7 @@
 
 		<section class="page-intro">
 			<h1 class="intro-h1 home-intro">Bikes Fight Cancer</h1>
-			<h2 class="intro-h2">Our Goal: Raise $26,000 for the Pan-Mass Challenge</h2>
+			<h2 class="intro-h2">{{intro.goal}}</h2>
 			<a class="btn btn-large btn-donate">Donate Today</a>
 		</section><!-- /page-intro -->	
 
