Starting history inside page

--- a/views/page-2010-2.twig
+++ b/views/page-2010-2.twig
@@ -62,9 +62,24 @@
 		<div class="caption-h">Robert Charles Photography Session</div>
 		<ul classs="raffle-history-ul">
 			<li class="raffle-history-item">Warren Izyk</li>	
-		</ul><!-- /raffle-history-ul -->				
+		</ul><!-- /raffle-history-ul -->
 
+		<div class="caption-h">Rocking Chair</div>
+		<ul classs="raffle-history-ul">
+			<li class="raffle-history-item">Steve Moskal</li>	
+		</ul><!-- /raffle-history-ul -->
+
+		<div class="caption-h">Diamond Necklace</div>
+		<ul classs="raffle-history-ul">
+			<li class="raffle-history-item">Bill Bellamy</li>	
+		</ul><!-- /raffle-history-ul -->										
 	</section><!-- /raffle-history -->	
+
+	<section class="sponsors-history">
+		<ul class="sponsors-history-ul">
+			<li class="sponsors-history-item">Metamorphosis Massage</li>
+		</ul><!-- /sponsors-history-ul -->	
+	</section><!-- /sponsors-history -->
 	
 	{% for child in post.get_children %}
 		{{child.title}}
